<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:background="#F5E7DC"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/image_help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="fitXY"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_btn"
                    android:layout_margin="20dp"
                    android:onClick="back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/help"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="28dp"/>

                <ImageView
                    android:id="@+id/circle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/circle"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/help"/>

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/text1"
                    app:layout_constraintStart_toEndOf="@+id/circle1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/circle1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="-8dp"
                    android:layout_marginEnd="24dp"
                    android:textSize="23sp"/>

                <ImageView
                    android:id="@+id/circle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/circle"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text1"/>

                <TextView
                    android:id="@id/text2"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/text2"
                    app:layout_constraintStart_toEndOf="@+id/circle2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/circle2"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="-8dp"
                    android:textSize="23sp"/>

                <ImageView
                    android:id="@+id/circle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/circle"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text2"/>

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/text3"
                    app:layout_constraintStart_toEndOf="@+id/circle3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/circle3"
                    android:layout_marginTop="-8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="24dp"
                    android:textSize="23sp"/>

                <ImageView
                    android:id="@+id/circle4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/circle"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text3"/>

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text4"
                    app:layout_constraintStart_toEndOf="@+id/circle4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/circle4"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="-8dp"
                    android:layout_marginEnd="24dp"
                    android:textColor="@color/black"
                    android:textSize="23sp"/>

                <ImageView
                    android:id="@+id/circle5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/circle"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text4"/>

                <TextView
                    android:id="@+id/text5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text5"
                    android:layout_marginTop="-8dp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/circle5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/circle5"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="24dp"
                    android:textSize="23sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>